--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,13 +6,16 @@
         <%= title %>
     </title>
 
-    <!--  3rd party stylesheets -->
+    <!--  3rd party stylesheets and fonts -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Lato|Satisfy" rel="stylesheet">
+    <!-- website stylesheet -->
+    <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
 <body>
-    <div class="container">
+    <div class="container-fluid">
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div class="navbar-header">
@@ -22,15 +25,15 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
-                        </button>
-                        <a class="navbar-brand" href="#">My Family</a>
+                    </button>
+                    <a class="navbar-brand" href="/">My Family</a>
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li class="<% if (title == "Pranav Kural") { /%>active<% } %>"><a href="/pranav">Pranav Kural</a></li>
-                        <li class="<% if (title == "Aanchal Sharma") { /%>active<% } %>"><a href="/aanchal">Aanchal Sharma</a></li>
-                        <li class="<% if (title == "Anuradha Sharma") { /%>active<% } %>"><a href="/anu">Anuradha Sharma</a></li>
-                        <li class="<% if (title == "Tarloki Nath Sharma") { /%>active<% } %>"><a href="/tarloki">Tarloki Nath Sharma</a></li>
+                        <li class="<% if (title == "Pranav Kural") { %>active<% } %>"><a href="/pranav">Pranav Kural</a></li>
+                        <li class="<% if (title == "Aanchal Sharma") { %>active<% } %>"><a href="/aanchal">Aanchal Sharma</a></li>
+                        <li class="<% if (title == "Anuradha Sharma") { %>active<% } %>"><a href="/anu">Anuradha Sharma</a></li>
+                        <li class="<% if (title == "Tarloki Nath Sharma") { %>active<% } %>"><a href="/tarloki">Tarloki Nath Sharma</a></li>
                     </ul>
                 </div>
             </div>
