--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,8 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-family: "Lato", Helvetica, Arial, sans-serif;
 }
 
-a {
-  color: #00B7FF;
+/* Overriding bootstrap styles  */
+.navbar-brand {
+  font-size: 2em;
 }
