--- a/views/aanchal.ejs
+++ b/views/aanchal.ejs
@@ -1,3 +1,21 @@
 <% include ./partials/header.ejs %>
 
+    <div class="jumbotron">
+        <div class="row">
+            <div class="col-md-8">
+                <div class="page-header">
+                    <h1><%= title %></h1>
+                </div>
+                <p>
+                    <%= description %>
+                </p>
+            </div>
+            <div class="col-md-4">
+                <a href="#" class="thumbnail">
+                    <img src="/images/glasses.svg" alt="<%= title %>">
+                </a>
+            </div>
+        </div>
+    </div>
+
 <% include ./partials/footer.ejs %>
