--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,10 @@
+            <footer class="navbar navbar-default navbar-fixed-bottom">
+                <div class="container">
+                    <div class="text-center">
+                        <h3>Made with 💗 by Pranav Kural</h3>
+                    </div>
+                </div>
+            </footer>   
         </div>
         <!-- 3rd party script files -->
         <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
