--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,16 @@
 body {
   font-family: "Lato", Helvetica, Arial, sans-serif;
 }
+footer{
+    background: #eee !important;
+    min-height: 10em !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+img {
+  width: 60%;
+}
 
 /* Overriding bootstrap styles  */
 .navbar-brand {
