--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,19 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
-</html>
+<% include ./partials/header.ejs %>
+
+ <div class="jumbotron">
+        <div class="row">
+            <div class="col-md-8">
+                <div class="page-header">
+                    <h1><%= title %></h1>
+                </div>
+                <p>
+                    <%= description %>
+                </p>
+            </div>
+            <div class="col-md-4">
+                <img src="/images/my_family.png" alt="<%= title %>">
+            </div>
+        </div>
+    </div>
+
+<% include ./partials/footer.ejs %>
